# xiuxian_bot

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  config.json  package.json  pyproject.toml  requirements.txt  run_local.py  setup.sh  start.py  开发修改流程手册.md
adapters/: actor_paths.py
adapters/aiogram/: bot.py  legacy_bridge.py  ui.py
adapters/telegram/: bot.py
core/: config.py  constants.py  server.py
core/admin/: user_management.py
core/database/: connection.py  events_schema.sql  game_repository.py  migrations.py  schema.py  schemas.py  user_repository.py
core/game/: achievements.py  combat.py  combat_kernel.py  currency.py  elements.py  items.py  leaderboards.py  quests.py  realms.py  secret_realms.py  skills.py  story.py  story_volumes.py
core/routes/: __init__.py  cultivation.py  equipment.py  misc.py  sect.py  shop.py  skills.py  story.py  travel.py  user.py
core/services/: achievements_service.py  (+17 more)
logs/: feature_intro_seen.json  panel_owners.json
scripts/: generate_reports.py  smoke_api_e2e.py  smoke_bot_layer.py  smoke_social_chat.py
tests/: conftest.py  test_account_status_location.py  test_aiogram_legacy_bridge.py  test_breakthrough_failure_message_consistency.py  test_breakthrough_pity_config.py  test_breakthrough_protect_currency.py  test_combat_service_fixes.py  test_social_sect_review_fixes.py  test_telegram_cultivate_buttons.py  test_telegram_feature_intro.py  test_telegram_panel_ownership.py
web_local/: app.py
web_public/: app.py
xiuxian-gateway/: go.mod  go.sum
xiuxian-web/: package.json  pnpm-lock.yaml  vite.config.ts
(+199 files in other folders)
