[project]
name = "xiuxian-bot"
version = "0.1.52"
description = "修仙题材后端游戏服务"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "aiohttp>=3.9.0",
    "python-telegram-bot==22.6",
    "aiogram>=3.13.1",
    "redis>=5.0",
    "cnlunar==0.2.4",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9",
    "pytest>=8.0",
    "python-dotenv>=1.0",
    "pg8000>=1.31.5",
    "asyncpg>=0.31.0",
]

[project.scripts]
xiuxian = "start:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "adapters", "web_local", "web_public"]
